@@ -779,7 +779,7 @@ category.function = Function
 category.optional = Optional Enhancements
 setting.landscape.name = Lock Landscape
 setting.shadows.name = Shadows
-setting.blockreplace.name = Automatic Block Suggestions
+setting.blockreplace.name = Automatic Block Placement Modifiers (Hold shift to toggle on or off)
 setting.linear.name = Linear Filtering
 setting.hints.name = Hints
 setting.flow.name = Display Resource Flow Rate
