@@ -79,7 +79,7 @@ public enum Binding implements KeyBind{
     navigate_to_camera(KeyCode.z),
     stop_following_path(KeyCode.minus),
     show_turret_ranges(KeyCode.backtick),
-    disable_auto_bridging(KeyCode.shiftLeft),
+    toggle_placement_modifiers(KeyCode.shiftLeft),
     chat_autocomplete(KeyCode.tab),
     invisible_units(KeyCode.o),
     auto_build(KeyCode.semicolon)
